--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -784,45 +784,32 @@
         <div class="tab-content mt-3">
             <!-- Home tab -->
             <div class="tab-pane fade show active" id="home" role="tabpanel">
-                <h1 class="text-center">Welcome to the Code Centre for new Medicine Postgraduate courses</h1>
-                <p>This site is dedicated to the editors of new postgraduate Medicine program LearnX sites - MEDI7100, MEDI7200, MEDI7300 and MEDI7400. These sites have Bootstrap (CSS and JS library) and Font Awesome (icons) referenced, and allow for some advanced formatting and icon usage. This can seem tricky and intimidating at first, so this site gives you:</p>
-                <ul>
-                    <li>an easy to navigate menu at the top of screen to go to the element snippet or builder you require.</li>
-                    <li>a range of <strong>code snippets</strong> (headings, image/text combinations, accordions, quotes, buttons, alerts) if you prefer to work from templated HTML rather than build an item from scratch.</li>
-                    <li><strong>code builders</strong> - these are powerful web applications that allow you to make some choices about attributes of your elements, input plain text, rich text and links to achieve your format rather than copying and pasting code and then editing. You build your element, look at a preview as you make changes then copy the code created and paste it into LearnX.</li>
-                    <li>Help - if you see green question mark icons like this - <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="I have hidden help you can see when you hover on me" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span> - you can hover over them fo quick guidance on what information is required.</li>
-                </ul>
-                <hr>
+                <h1 class="text-center">Welcome to the Code Centre</h1>
                 <div class="row">
                     <div class="col-lg">
-                        <h3 class="text-center">Site Format</h3>
-                        <p>The format and intended use of this site is as follows:</p>
-                        <ul>
-                            <li>Each page has an example with a copy button located underneath the example. Make your choices, input the required information to create your element and then click the button to copy the HTML required for the element ready to paste in LearnX.</li>
-                            <li>If you use the code snippets, once you paste your code be sure to replace any placeholders for text, images, videos or other elements within the correct HTML tags.</li>
-                            <li>If you encounter issues or have a suggestion for improving this page please hit the button to jump out to the Microsoft Form and log a bug/issue/suggestion in the footer of each page.</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg">
-                        <h3 class="text-center">Important information</h3>
-                        <p>Some important things to note:</p>
-                        <ul>
-                            <li>All elements here use colours and formatting that align with the style and approach of the MEDI7100 design team. Deviate from them at your own peril! (Only kidding, just get in touch for support and we will likely add your idea to the bunch here if it is a sound idea).</li>
-                            <li>All placeholder images and videos are public links. They will display their content until you delete or replace them.</li>
-                            <li>Currently, we do not have a way of pulling existing content into this site and reformmating it. We are working on it, but it is a complex task.</li>
-                            <li>Elements are only available here if they are tested and work.</li>
-                            <li>The team have only piloted this in Year 1, 2022. They are still learning about how this all interacts on LearnX, so if you use this code and it goes wrong, and you ask for support, be patient! Perfection takes time, focus and diligence.</li>
-                            <li>The table and accordion builders are complex elements. So specific instructions relating to these is in a large red alert at the top of the page. Once you have read the alerts, you can close them and they should not return unless you click the eye icon in the bottom right of screen.</li>
-                        </ul>
+                        <h2 class="text-center">Welcome video and overview</h2>
+                        <div class="ratio ratio-16x9">
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/22f9936e-84b1-45cc-932f-d2d6e87813a2/public?autoplay=false&automute=false"></iframe>
+                        </div>
                     </div>
                     <div class="col-lg">
                         <h3 class="text-center"> Make Studio view = Live view</h3>
-                        <p>You can install a user scripts add on to be able to see the Bootstrap design reflected in studio, rather than jumping out to live version. It’s not 100% perfect all the time, but it saves a lot of time with checking whether something is right and skipping back and forth between the studio and live version of your content. Steps for this are:</p>
+                        <p>You can install a userscript add on to be able to see the responsive design reflected in studio, rather than jumping out to live version each time. It is not a 100% perfect reflection, but it is incredibly close and will save you a lot of time when developing in Extend. Steps for this are:</p>
                         <ol>
-                            <li>Install Tampermonkey extension on your Chrome/Edge/Firefox browser - <a href="https://www.tampermonkey.net/" target="_blank" title="Tampermonkey">https://www.tampermonkey.net/</a> </li>
-                            <li>Install the BS + FA in studio script - <a href="https://greasyfork.org/en/scripts/456866-bs-fa-in-studio" target="_blank" title="Bootstrap in LearnX Studio UserScript Install">https://greasyfork.org/en/scripts/456866-bs-fa-in-studio</a></li>
+                            <li>Install Tampermonkey extension on your browser by clicking on the relative link below and following the install instructions:<ul>
+                                <li><a href="https://www.tampermonkey.net/index.php?browser=chrome" title="Tampermonkey for Chrome" target="_blank">Chrome - recommended for Extend</a></li>
+                                <li><a href="https://www.tampermonkey.net/index.php?browser=edge" title="Tampermonkey for Edge" target="_blank">Edge</a></li>
+                                <li><a href="https://www.tampermonkey.net/index.php?browser=firefox" title="Tampermonkey for Firefox" target="_blank">Firefox - <strong>not recommended</strong> for Extend</a></li>
+                                <li><a href="https://www.tampermonkey.net/index.php?browser=safari" title="Tampermonkey for Safari" target="_blank">Safari</a></li>
+                                <li><a href="https://www.tampermonkey.net/index.php?browser=opera" title="Tampermonkey for Opera Next" target="_blank">Opera Next</a></li>
+                            </ul></li>
+                            <li>Install the Bootstrap + FontAwesome + studio improvements userscript from Github - <a href="https://bit.ly/uqextenduserscript" target="_blank" title="Bootstrap + Font Awesome + Studio Improvements in UQ Extend Studio UserScript Install">https://bit.ly/uqextenduserscript</a></li>
                         </ol>
                     </div>
+                </div>
+               
+                <hr>
+                
                 </div>
             </div>
             <!-- img snippets currently not in use -->
