--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -789,27 +789,41 @@
                     <div class="col-lg">
                         <h2 class="text-center">Welcome video and overview</h2>
                         <div class="ratio ratio-16x9">
-                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/22f9936e-84b1-45cc-932f-d2d6e87813a2/public?autoplay=false&automute=false"></iframe>
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/6bc46b94-e42f-4a1d-a896-62e61b15c8b2/public?autoplay=false&automute=false"></iframe>
                         </div>
                     </div>
                     <div class="col-lg">
-                        <h3 class="text-center"> Make Studio view = Live view</h3>
-                        <p>You can install a userscript add on to be able to see the responsive design reflected in studio, rather than jumping out to live version each time. It is not a 100% perfect reflection, but it is incredibly close and will save you a lot of time when developing in Extend. Steps for this are:</p>
-                        <ol>
-                            <li>Install Tampermonkey extension on your browser by clicking on the relative link below and following the install instructions:<ul>
-                                <li><a href="https://www.tampermonkey.net/index.php?browser=chrome" title="Tampermonkey for Chrome" target="_blank">Chrome - recommended for Extend</a></li>
-                                <li><a href="https://www.tampermonkey.net/index.php?browser=edge" title="Tampermonkey for Edge" target="_blank">Edge</a></li>
-                                <li><a href="https://www.tampermonkey.net/index.php?browser=firefox" title="Tampermonkey for Firefox" target="_blank">Firefox - <strong>not recommended</strong> for Extend</a></li>
-                                <li><a href="https://www.tampermonkey.net/index.php?browser=safari" title="Tampermonkey for Safari" target="_blank">Safari</a></li>
-                                <li><a href="https://www.tampermonkey.net/index.php?browser=opera" title="Tampermonkey for Opera Next" target="_blank">Opera Next</a></li>
-                            </ul></li>
-                            <li>Install the Bootstrap + FontAwesome + studio improvements userscript from Github - <a href="https://bit.ly/uqextenduserscript" target="_blank" title="Bootstrap + Font Awesome + Studio Improvements in UQ Extend Studio UserScript Install">https://bit.ly/uqextenduserscript</a></li>
-                        </ol>
+                        <h2 class="text-center">Make Studio view = Live view</h2>
+                        <!-- Start Code Centre Element-->
+                        <div class="row">
+                            <div class="col-lg">
+                                <div class="col-lg-6 float-lg-end m-2">
+                                    <div class="ratio ratio-16x9">
+                                        <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/745bb6f2-c7c0-4616-97ec-0dd72a3f8139/public?autoplay=false&automute=false"></iframe>
+                                    </div>
+                                </div>
+                                <h4 class="text-center mt-2">Text Instructions for Installing the Userscript</h4>
+                                <p>You can install a userscript add on to be able to see the responsive design reflected in studio, rather than jumping out to live version each time. It is not a 100% perfect reflection, but it is incredibly close and will save you a lot of time when developing in Extend. Steps for this are:</p>
+                                <ol>
+                                    <li>Install Tampermonkey extension on your browser by clicking on 
+                                        relative link below and following the install instructions:
+                                        <ul>
+                                        <li><a title="Tampermonkey for Chrome" href="https://www.tampermonkey.net/index.php?browser=chrome" target="_blank" rel="noopener">Chrome - recommended for Extend</a></li>
+                                        <li><a title="Tampermonkey for Edge" href="https://www.tampermonkey.net/index.php?browser=edge" target="_blank" rel="noopener">Edge</a></li>
+                                        <li><a title="Tampermonkey for Firefox" href="https://www.tampermonkey.net/index.php?browser=firefox" target="_blank" rel="noopener">Firefox - <strong>not recommended</strong> for Extend</a></li>
+                                        <li><a title="Tampermonkey for Safari" href="https://www.tampermonkey.net/index.php?browser=safari" target="_blank" rel="noopener">Safari</a></li>
+                                        <li><a title="Tampermonkey for Opera Next" href="https://www.tampermonkey.net/index.php?browser=opera" target="_blank" rel="noopener">Opera Next</a></li>
+                                    </ul>
+                                        </li>
+                                        <li>Install the Bootstrap + FontAwesome + studio improvements userscript from Github - <a title="Bootstrap + Font Awesome + Studio Improvements in UQ Extend Studio UserScript Install" href="https://bit.ly/uqextenduserscript" target="_blank" rel="noopener">https://bit.ly/uqextenduserscript</a></li>
+                                    </ol>
+                                </div>
+                                    <!-- End Code Centre Element-->    
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <hr>
-            </div>
-            <!-- img snippets currently not in use -->
+                                        <!-- img snippets currently not in use -->
             <!--<div class="tab-pane fade" id="imgRight" role="tabpanel">
                 <h3 class="text-bg-uq p-2">Text left/Image right</h3>
                 <div class="copythis">
